# temporal-oms

./: .env.codespaces  .env.example  .gitignore  .tool-versions  CHANGELOG.md  CLOUD.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  LICENSE  PROJECT_REQUIREMENTS_DOCUMENT.md  PROJECT_STATUS.md  README.md  WELCOME.md  WORKSHOP.md  buf.gen.yaml  check_rate_limits.sh
.devcontainer/: Dockerfile  devcontainer.json  on-create.sh
SPECS/: README.md  TEMPLATE.md
config/: acme.automations.secret.template.yaml  acme.processing.secret.template.yaml  fde.automations.secret.template.yaml  (+3 more)
python/: README.md  pyproject.toml
python/fulfillment/: Dockerfile
python/fulfillment/config/: warehouses.toml  warehouses2.toml
python/fulfillment/src/: config.py  worker.py
python/fulfillment/src/agents/activities/: easypost.py  inventory.py  llm.py  location_events.py  shipping.py
python/fulfillment/src/agents/dispatch/: __init__.py  tool_dispatch.py
python/fulfillment/src/agents/workflows/: DESIGN.md  shipping_agent.py
python/fulfillment/src/converter/: __init__.py  _converters.py  _registry.py
python/fulfillment/src/services/: enablements_integrations.py  inventory_service.py  shipping_agent_impl.py
python/fulfillment/src/workers/: easypost_worker.py  fulfillment_worker.py  predicthq_worker.py  shipping_worker.py
python/fulfillment/tests/: conftest.py  test_converter.py  test_enablements_integrations_client.py  test_shipping_agent.py  test_tool_dispatch.py
python/fulfillments/: Dockerfile
python/fulfillments/src/agents/activities/: location_events.py
(+425 files in other folders)
