[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.13.5",
    "anthropic>=0.96.0",
    "easypost>=10.6.0",
    "protobuf-to-pydantic>=0.3.3.1",
    "temporalio>=1.26.0",
    "toml>=0.10.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["fulfillment/tests"]

[dependency-groups]
dev = [
    "mypy-protobuf>=5.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]
